--- a/AppPizzasWatch2 WatchKit Extension/Info.plist
+++ b/AppPizzasWatch2 WatchKit Extension/Info.plist
@@ -6,6 +6,8 @@
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>AppPizzasWatch2 WatchKit Extension</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
